[package]
edition = "2021"
name = "nom-tracer"
version = "0.1.5"
authors = ["Xavier Basty <xavier@hexbee.net>"]
repository = "https://github.com/hexbee-net/nom-tracer"
keywords = ["parser", "nom", "trace", "debug"]
categories = ["parsing"]
readme = "README.md"
description = "Extension of nom to trace parser execution"
license-file = "LICENSE"
publish = true

[dependencies]
nom = "7.1.3"
colored = { version = "2.1.0", optional = true }
termcolor = { version = "1.4.1", optional = true }

[dev-dependencies]
termcolor = "1.4.1"

[features]
default = ["trace"]
all = ["trace", "trace-color", "trace-print", "trace-context", "trace-max-level"]
trace = []
trace-color = ["trace", "dep:colored", "dep:termcolor"]
trace-print = ["trace"]
trace-context = ["trace"]
trace-max-level = ["trace"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
unwrap_or_default = "allow"
