[package]
edition = "2021"
name = "nom-tracer"
version = "0.1.6"
authors = ["Xavier Basty <xavier@hexbee.net>"]
repository = "https://github.com/hexbee-net/nom-tracer"
keywords = ["parser", "nom", "trace", "debug"]
categories = ["parsing"]
readme = "README.md"
description = "Extension of nom to trace parser execution"
license-file = "LICENSE"
publish = true

[dependencies]
nom = "7.1.3"

[features]
default = ["trace"]
all = ["trace", "trace-color", "trace-print", "trace-context", "trace-max-level"]
trace = []
trace-context = []
trace-color = ["trace"]
trace-print = ["trace"]
trace-max-level = ["trace"]
trace-silencing = ["trace"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
unwrap_or_default = "allow"
