[package]
edition = "2021"
name = "nom-tracer"
version = "0.1.6"
authors = ["Xavier Basty <xavier@hexbee.net>"]
repository = "https://github.com/hexbee-net/nom-tracer"
keywords = ["parser", "nom", "trace", "debug"]
categories = ["parsing"]
readme = "README.md"
description = "Extension of nom to trace parser execution"
license-file = "LICENSE"
publish = true

[dependencies]
nom = "7.1.3"

[features]
default = ["trace", "trace-context", "trace-color", "trace-print", "trace-max-level", "trace-silencing"]
trace = []
trace-context = []
trace-color = ["trace"]
trace-print = ["trace"]
trace-max-level = ["trace"]
trace-silencing = ["trace"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
unwrap_or_default = "allow"

[[example]]
name = "simple_parser"
path = "examples/simple_parser.rs"

[[example]]
name = "activate_deactivate_trace"
path = "examples/activate_deactivate_trace.rs"


[[example]]
name = "custom_tags"
path = "examples/custom_tags.rs"

[[example]]
name = "nested_parsers"
path = "examples/nested_parsers.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "silence_tree"
path = "examples/silence_tree.rs"
required-features = ["trace-silencing"]

[[example]]
name = "max_level_trace"
path = "examples/max_level_trace.rs"
required-features = ["trace-max-level"]
